@@ -11,6 +11,11 @@
 * specific language governing permissions and limitations under the License.                                              *
 ***************************************************************************************************************************
 
+Release Notes - Juneau - Version 8.0.0
+
+** Improvement
+    * [JUNEAU-91] - Update Jetty to jetty-9.4.13.v20181111
+
 
 Release Notes - Juneau - Version 7.2.2
 
